--- a/NEWS
+++ b/NEWS
@@ -24,3 +24,7 @@ version 0.1.3: (2015-05-18)
 - Vignette has been updated according to the changes above. Instructions for installation were added. 
 - 'BASiCS_Filter' function added.
 - Dependency to R (>= 3.1.0) has been added.
+
+version 0.1.4: (2015-05-21)
+
+- 'BASiCS_Denoise' function added. It produces a table of normalised and denoised expression counts (after removing the effect of technical variation). 
