--- a/vignettes/BASiCSIntro.Rmd
+++ b/vignettes/BASiCSIntro.Rmd
@@ -327,6 +327,28 @@ points(DetectLVG$Table[DetectLVG$Table[,6]==1,2], DetectLVG$Table[DetectLVG$Tabl
        pch = 16, col = "blue", cex = 1)
 ```
 
+## Normalisation and removal of technical variation
+
+After performing the analysis, the user might want to produce a matrix of normalised and denoised expression counts for which the effect of technical variation is removed. For this purpose, we implemented the function `BASiCS_DenoisedCounts`. For each gene $i$ and cell $j$ this function returns
+
+$$ x^*_{ij} = \frac{ x_{ij} } {\hat{\phi}_j \hat{\nu}_j}, $$
+
+where $x_{ij}$ is the observed expression count of gene $i$ in cell $j$, $\hat{\phi}_j$ denotes the posterior median of $\phi_j$ and $\hat{\nu}_j$ is the posterior median of $\nu_j$.
+
+```{r DenoisedCounts}
+DenoisedCounts = BASiCS_DenoisedCounts(Data = Data, Chain = MCMC_Output)
+```
+
+Alternativelly, the user can compute the normalised and denoised expression rates underlying the expression of all genes across cells using `BASiCS_DenoisedRates`. The output of this function is given by 
+
+$$ \Lambda_{ij} = \hat{\mu_i} \hat{\rho}_{ij},  $$
+
+where $\hat{\mu_i}$ represents the posterior median of $\mu_j$ and $\hat{\rho}_{ij}$ is given by its posterior mean (Monte Carlo estimate based on the MCMC sample of all model parameters).
+
+```{r DenoisedRates}
+DenoisedRates = BASiCS_DenoisedRates(Data = Data, Chain = MCMC_Output)
+```
+
 ### Session information
 ```{r SessionInfo}
 sessionInfo()
