--- a/NEWS
+++ b/NEWS
@@ -28,3 +28,6 @@ version 0.1.3: (2015-05-18)
 version 0.1.4: (2015-05-21)
 
 - 'BASiCS_Denoise' function added. It produces a table of normalised and denoised expression counts (after removing the effect of technical variation). 
+
+version 0.1.5: (2015-05-27)
+- Small typo in 'BASiCS_VarThresholdSearchHVG' and 'BASiCS_VarThresholdSearchLVG' has been fixed. 
