--- a/NEWS
+++ b/NEWS
@@ -31,3 +31,8 @@ version 0.1.4: (2015-05-21)
 
 version 0.1.5: (2015-05-27)
 - Small typo in 'BASiCS_VarThresholdSearchHVG' and 'BASiCS_VarThresholdSearchLVG' has been fixed. 
+
+version 0.1.6: (2015-06-01)
+- Replacement of parameter-specific 'displayChain's functions by a generic method displayChainBASiCS
+- Replacement of parameter-specific 'displaySummary's functions by a generic method displaySummaryBASiCS
+- In 'BASiCS_DetectHVG' and 'BASiCS_DetectLVG': constrain added to that prob >= 0.5 is required to detect HVG and LVG
