--- a/NEWS
+++ b/NEWS
@@ -36,3 +36,7 @@ version 0.1.6: (2015-06-01)
 - Replacement of parameter-specific 'displayChain's functions by a generic method displayChainBASiCS
 - Replacement of parameter-specific 'displaySummary's functions by a generic method displaySummaryBASiCS
 - In 'BASiCS_DetectHVG' and 'BASiCS_DetectLVG': constrain added to that prob >= 0.5 is required to detect HVG and LVG
+
+version 0.2.0: (2015-06-24)
+- New parametrization for mRNA content size factors $\phi_j$ that improves mixing of the MCMC algorithm (using adaptive Dirichlet proposals)
+- Updated vignette
