--- a/NEWS
+++ b/NEWS
@@ -57,3 +57,6 @@ version 0.3.1: (2015-09-17)
 version 0.3.2: (2015-10-23)
 - Minor changes to the output of `BASiCS_MCMC` function (colnames of the elements related to the parameter $\theta$)
 - Addition of extra optional parameter `ls.phi0` to `BASiCS_MCMC` function. This is helpful on situations where the default value led to slow mixing to the chains related to the normalising constants $\phi_j$'s. 
+
+version 0.3.3: (2015-11-05)
+- Same method as before but improved performance of C++ code
