--- a/NEWS
+++ b/NEWS
@@ -60,3 +60,6 @@ version 0.3.2: (2015-10-23)
 
 version 0.3.3: (2015-11-05)
 - Same method as before but improved performance of C++ code
+
+version 0.3.4: (2015-11-11)
+- Fix of example code of 'newBASiCS_Data' function. Thanks to Simon Andrews for pointing out this issue. 
