--- a/NEWS
+++ b/NEWS
@@ -71,3 +71,6 @@ version 0.3.5: (2015-11-27)
 
 version 0.4.0: (2015-12-21)
 - Preliminary functions for differential expression analyses (mean and over-dispersion) have been added. 
+
+version 0.4.1: (2016-02-04)
+- Optional argument 'Start' added to `BASiCS_MCMC` function to allow running chains with a variety of user-defined starting point. In general, we do not advise to use this argument as the default option has been tuned to facilitate convergence. 
