--- a/NEWS
+++ b/NEWS
@@ -72,5 +72,9 @@ version 0.3.5: (2015-11-27)
 version 0.4.0: (2015-12-21)
 - Preliminary functions for differential expression analyses (mean and over-dispersion) have been added. 
 
-version 0.4.1: (2016-02-04)
+version 0.4.1: (2016-02-05)
+- Fixed bug in vignette (usage of `newBASiCS_Data` function). Same bug has been fixed in documentation of class `BASiCS_Data`. 
 - Optional argument 'Start' added to `BASiCS_MCMC` function to allow running chains with a variety of user-defined starting point. In general, we do not advise to use this argument as the default option has been tuned to facilitate convergence. 
+- Updated documentation of 'BASiCS_DetectHVG' and 'BASiCS_VarianceDecomp' function (removing 'GeneNames' argument)
+- Updated documentation for 'BASiCS_DV_TestDE' function. 
+- Missing @description sections added to several .Rd files. 
