--- a/NEWS
+++ b/NEWS
@@ -111,3 +111,6 @@ version 0.5.4: (2016-04-15)
 version 0.5.5: (2016-04-18)
 - Small fix when checking the validity of a `BASiCS_D_Data` object. Thanks to Nils Eling. 
 - Fixed issue with documentation files. 
+
+version 0.5.6: (2016-04-19)
+- Fixed message in `BASiCS_D_Test` function. This does not affect functionality. Only the message that is printed in the console. 
