--- a/NEWS
+++ b/NEWS
@@ -117,3 +117,7 @@ version 0.5.6: (2016-04-19)
 
 version 0.5.7: (2016-04-27)
 - Welcome message added
+
+version 0.5.8: (2016-05-18) 
+- After profiling of c++ functions, minor edits to improve memory usage. These do not affect user interface
+- Small change in funtion 'makeExampleBASiCS_Data' to avoid 'NOTICE' message
