--- a/NEWS
+++ b/NEWS
@@ -149,3 +149,5 @@ version 0.6.2: (2016-05-31)
 - Faster adaptation steps for 'HiddenBASiCS_MCMCcppBatch' 'HiddenBASiCS_MCMCcppNoSpikes'
 - 'HiddenBASiCS_MCMCcppNoSpikes' completed for testing stage (not ready for users)
 
+version 0.6.3: (2016-05-31)
+- Small update in wellcome message. 
